# python-template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
myproject/: __init__.py  cli.py  processor.py  utils.py
tests/: test_processor.py  test_utils.py
